vista index funcionando (listado getall de usuarios)

--- a/TecnicoDevJr/TecnicoDevJr/appsettings.json
+++ b/TecnicoDevJr/TecnicoDevJr/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=DevJrCoa;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "TecnicoDevJrDBConnection": "Server=localhost\\SQLEXPRESS;Database=DevJrCoa;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
